data/all_generated_tests/raw_wast_tests/return_InvalidorInconsistentControlFlowGraph_2917.wast
;; **Test 6: All Possible Paths Hitting Return Instruction**  Construct functions with branches such that all paths lead to a return instruction and the stack arrangement across paths differs. Verify both implementations handle CFG path merges correctly during returns. WebAssembly needs to ensure combined operand stack is valid across paths. Wizard Engine should properly merge operand state and detect discrepancies.  _Checks CFG consistency when multiple branches converge at a return instruction._

(assert_invalid
  (module
    (func $cfg-path-merges-at-return (result i32)
      (block (block (i32.const 1) (br 1)) (return))
      (block (i32.const 2) (br 0))
      (drop)
    )
  )
  "type mismatch"
)